--- a/main.yml
+++ b/main.yml
@@ -43,12 +43,14 @@ applications:
   frontend:
     sub_apps:
       - id: insights
+        group: applications
         title: Insights
         permissions:
           method: isEntitled
           args:
             - insights
       - id: cost-management
+        group: applications
         title: Cost Management
         permissions:
           method: isEntitled
