Cost Management details links are not highlighted

--- a/main.yml
+++ b/main.yml
@@ -204,10 +204,9 @@ details:
     sub_apps:
       - id: ocp
         title: OpenShift
-        group: cost-management
       - id: aws
+        default: true
         title: Infrastructure
-        group: cost-management
 
 policies:
   title: Policies
