--- a/main.yml
+++ b/main.yml
@@ -154,8 +154,8 @@ compliance:
       - id: ''
         title: Reports
         default: true
-      - id: policies
-        title: Policies
+      - id: scappolicies
+        title: SCAP Policies
       - id: systems
         title: Systems
 
