s/Policies/SCAP Policies/ for compliance (#167)
Towards https://projects.engineering.redhat.com/browse/RHCLOUD-5432

--- a/main.yml
+++ b/main.yml
@@ -150,8 +150,8 @@ compliance:
       - id: ''
         title: Reports
         default: true
-      - id: policies
-        title: Policies
+      - id: scappolicies
+        title: SCAP Policies
       - id: systems
         title: Systems
 
