--- a/main.yml
+++ b/main.yml
@@ -258,6 +258,9 @@ drift:
       - id: baselines
         title: Baselines
         reload: drift/baselines
+frontend-assets:
+  title: Frontend Assets
+  deployment_repo: https://github.com/RedHatInsights/frontend-assets-build.git
 
 hooks:
   title: Web Hooks Service
