add /settings to rbac

--- a/main.yml
+++ b/main.yml
@@ -396,6 +396,7 @@ rbac:
   frontend:
     title: User access
     paths:
+      - /settings
       - /settings/rbac
     sub_apps:
       - id: groups
