--- a/main.yml
+++ b/main.yml
@@ -170,6 +170,10 @@ drift:
         title: Baselines
         reload: drift/baselines
 
+frontend-assets:
+  title: Frontend Assets
+  deployment_repo: https://github.com/RedHatInsights/frontend-assets-build.git
+
 hooks:
   title: Web Hooks Service
   api:
