Add SCAP policies compliance vert-nav menus

--- a/main.yml
+++ b/main.yml
@@ -45,7 +45,7 @@ applications:
             - insights
     paths:
       - /settings/applications
-      
+
 approval:
   title: Approval
   api:
@@ -123,10 +123,19 @@ compliance:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/compliance-frontend-build
   frontend:
     paths:
       - /insights/compliance
+    sub_apps:
+      - id: ''
+        title: Reports
+        default: true
+      - id: scappolicies
+        title: SCAP Policies
+      - id: systems
+        title: Systems
 
 config:
   title: Cloud Services Config
