Add SCAP policies compliance vert-nav menus [CI-stable] (#176)
* Add SCAP policies compliance vert-nav menus

* Remove isBeta

--- a/main.yml
+++ b/main.yml
@@ -45,7 +45,7 @@ applications:
             - insights
     paths:
       - /settings/applications
-      
+
 approval:
   title: Approval
   api:
@@ -127,6 +127,14 @@ compliance:
   frontend:
     paths:
       - /insights/compliance
+    sub_apps:
+      - id: ''
+        title: Reports
+        default: true
+      - id: scappolicies
+        title: SCAP Policies
+      - id: systems
+        title: Systems
 
 config:
   title: Cloud Services Config
