stage stuff for release

--- a/main.yml
+++ b/main.yml
@@ -35,6 +35,10 @@ api-docs:
 applications:
   title: Applications
   deployment_repo: https://github.com/RedHatInsights/settings-frontend-build
+  permissions:
+    method: isOrgAdmin
+    apps:
+      - cost-management
   frontend:
     sub_apps:
       - id: insights
@@ -43,6 +47,12 @@ applications:
           method: isEntitled
           args:
             - insights
+      - id: cost-management
+        title: Cost Management
+        permissions:
+          method: isEntitled
+          args:
+            - cost_management
     paths:
       - /settings/applications
       
@@ -133,6 +143,52 @@ config:
   title: Cloud Services Config
   deployment_repo: https://github.com/RedHatInsights/cloud-services-config
 
+cost-management:
+  title: Cost Management
+  top_level: true
+  api:
+    versions:
+      - v1
+    isBeta: true
+  channel: '#koku'
+  deployment_repo: https://github.com/RedHatInsights/cost-management-build
+  description: >
+    Cost Management is an application that provides users a view of their
+    enterprise cost. Cost Management allows users to evaluate the cost on
+    infrastructures like Amazon Web Services (AWS) across multiple *master*
+    accounts, breaking down to service usage, compute usage, and storage
+    allocation. Details can also be broken down utilizing tagging to view
+    data attributed to project or cost center assignments. Cost Management
+    also allows users to breakdown cost at the platform level by associating
+    cost with OpenShift clusters, nodes, and the projects running their. Cost
+    can be determined by deriving it from the underlying infrastructure (like
+    AWS) or deriving it based on a user set of rates.
+  docs: https://koku.readthedocs.io/en/latest/
+  frontend:
+    paths:
+      - /cost-management
+    sub_apps:
+      - id: ''
+        title: Overview
+        default: true
+        group: cost-management
+      - id: details
+        group: cost-management
+      - id: cost-models
+        title: Cost Models
+        group: cost-management
+  git_repo: https://github.com/project-koku/
+  mailing_list: cost-mgmt@redhat.com
+
+details:
+  title: Details
+  frontend:
+    sub_apps:
+      - id: ocp
+        title: OpenShift
+      - id: aws
+        title: Infrastructure
+
 dashboard:
   title: Dashboard
   channel: '#flip-mode-squad'
@@ -170,6 +226,10 @@ drift:
       - id: baselines
         title: Baselines
         reload: drift/baselines
+
+frontend-assets:
+  title: Frontend Assets
+  deployment_repo: https://github.com/RedHatInsights/frontend-assets-build.git
 
 hooks:
   title: Web Hooks Service
@@ -318,9 +378,9 @@ settings:
   top_level: true
   frontend:
     sub_apps:
-      - id: sources
       - id: rbac
         default: true
+      - id: sources
       - id: applications
 
 sources:
@@ -366,6 +426,19 @@ subscriptions:
     paths:
       - /staging/subscriptions
   git_repo: https://github.com/RedHatInsights/curiosity-frontend
+
+user-preferences:
+  title: User Preferences
+  deployment_repo: https://github.com/RedHatInsights/user-preferences-frontend-build
+  top_level: true
+  frontend:
+    title: User preferences
+    paths:
+      - /user-preferences
+    sub_apps:
+      - id: email
+        title: Email preferences
+        default: true
 
 vulnerability:
   title: Vulnerability Management
