update automation analytics (#186)
* update aa

* remove beta

--- a/main.yml
+++ b/main.yml
@@ -79,11 +79,13 @@ automation-analytics:
       - /ansible
       - /ansible/automation-analytics
     sub_apps:
-      - id: ''
+      - id: clusters
         title: Clusters
         default: true
       - id: organization-statistics
         title: Organization Statistics
+      - id: notifications
+        title: Notifications
 
 automation-hub:
   title: Automation Hub
