--- a/main.yml
+++ b/main.yml
@@ -42,8 +42,8 @@ applications:
       - cost-management
   frontend:
     sub_apps:
-      - id: insights
-        title: Insights
+      - id: advisor
+        title: Advisor
         permissions:
           method: isEntitled
           args:
