Use advisor in navigation and in URL instead of insights (#189)

--- a/main.yml
+++ b/main.yml
@@ -41,8 +41,8 @@ applications:
       - cost-management
   frontend:
     sub_apps:
-      - id: insights
-        title: Insights
+      - id: advisor
+        title: Advisor
         permissions:
           method: isEntitled
           args:
