--- a/main.yml
+++ b/main.yml
@@ -14,6 +14,7 @@ advisor:
         title: Recommendations
       - id: topics
         title: Topics
+  source_repo: https://github.com/RedHatInsights/insights-advisor-frontend
 
 ansible:
   title: Red Hat Ansible Automation Platform
@@ -32,6 +33,7 @@ api-docs:
     paths:
       - /docs/api
       - /docs
+  source_repo: https://github.com/RedHatInsights/api-frontend
 
 applications:
   title: Applications
@@ -58,6 +60,7 @@ applications:
         reload: applications/cost-management
     paths:
       - /settings/applications
+  source_repo: https://github.com/RedHatInsights/settings-frontend
 
 approval:
   title: Approval
@@ -70,6 +73,7 @@ approval:
     paths:
       - /ansible/catalog/approval
     reload: catalog/approval
+  source_repo: https://github.com/RedHatInsights/approval-ui
 
 automation-analytics:
   title: Automation Analytics
@@ -92,6 +96,7 @@ automation-analytics:
         title: Automation Calculator
       - id: notifications
         title: Notifications
+  source_repo: https://github.com/RedHatInsights/tower-analytics-frontend
 
 automation-hub:
   title: Automation Hub
@@ -107,7 +112,7 @@ automation-hub:
         title: Partners
       - id: my-namespaces
         title: My namespaces
-  git_repo: https://github.com/ansible/ansible-hub-ui
+  source_repo: https://github.com/ansible/ansible-hub-ui
 
 catalog:
   title: Automation Services Catalog
@@ -135,10 +140,12 @@ catalog:
       - id: orders
         title: Orders
       - id: approval
+  source_repo: https://github.com/RedHatInsights/catalog-ui
 
 chrome:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/insights-chrome-build
+  source_repo: https://github.com/RedHatInsights/insights-chrome
 
 compliance:
   title: Compliance
@@ -158,10 +165,12 @@ compliance:
         title: SCAP Policies
       - id: systems
         title: Systems
+  source_repo: https://github.com/RedHatInsights/compliance-frontend
 
 config:
   title: Cloud Services Config
   deployment_repo: https://github.com/RedHatInsights/cloud-services-config
+  source_repo: https://github.com/RedHatInsights/cloud-services-config
 
 cost-management:
   title: Cost Management
@@ -197,7 +206,7 @@ cost-management:
       - id: cost-models
         title: Cost models
         group: cost-management
-  git_repo: https://github.com/project-koku/
+  source_repo: https://github.com/project-koku/
   mailing_list: cost-mgmt@redhat.com
 
 details:
@@ -220,6 +229,7 @@ policies:
   frontend:
     paths:
       - /insights/policies
+  source_repo: https://github.com/RedHatInsights/policies-ui-frontend
 
 dashboard:
   title: Dashboard
@@ -229,6 +239,7 @@ dashboard:
     paths:
       - /insights
       - /insights/dashboard
+  source_repo: https://github.com/RedHatInsights/insights-dashboard
 
 docs:
   title: Documentation
@@ -258,10 +269,12 @@ drift:
       - id: baselines
         title: Baselines
         reload: drift/baselines
+  source_repo: https://github.com/RedHatInsights/drift-frontend
 
 frontend-assets:
   title: Frontend Assets
   deployment_repo: https://github.com/RedHatInsights/frontend-assets-build.git
+  source_repo: https://github.com/RedHatInsights/frontend-assets
 
 hooks:
   title: Web Hooks Service
@@ -274,6 +287,7 @@ hooks:
     title: Hooks
     paths:
       - /settings/hooks
+  source_repo: https://github.com/RedHatInsights/notifications-frontend
 
 ingress:
   title: Ingress
@@ -309,10 +323,12 @@ inventory:
     title: Inventory
     paths:
       - /insights/inventory
+  source_repo: https://github.com/RedHatInsights/insights-inventory-frontend
 
 landing:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/landing-page-frontend-build
+  source_repo: https://github.com/RedHatInsights/landing-page-frontend
 
 migrations:
   title: Migrations
@@ -337,7 +353,7 @@ migration-analytics:
     paths:
       - /migrations
       - /migrations/migration-analytics
-  git_repo: https://github.com/project-xavier/xavier-ui
+  source_repo: https://github.com/project-xavier/xavier-ui
 
 openshift:
   title: OpenShift (OCM)
@@ -357,6 +373,7 @@ openshift:
       - id: subscriptions
         title: Subscriptions
         group: openshift
+  source_repo: 
   top_level: true
 
 patch:
@@ -371,7 +388,7 @@ patch:
     title: Patch
     paths:
       - /insights/patch
-  git_repo: https://github.com/RedHatInsights/patchman-ui
+  source_repo: https://github.com/RedHatInsights/patchman-ui
 
 product:
   title: Product Documentation
@@ -385,6 +402,7 @@ product:
       - id: cloud-management-services
         title: Cloud Management Services
         reload: product/cloud-management-services
+  source_repo: https://github.com/RedHatInsights/docs-frontend
 
 rbac:
   title: Role-based Access Control
@@ -405,6 +423,7 @@ rbac:
         title: Roles
       - id: users
         title: Users
+  source_repo: https://github.com/RedHatInsights/insights-rbac-ui
 
 remediations:
   title: Remediations
@@ -416,6 +435,7 @@ remediations:
   frontend:
     paths:
       - /insights/remediations
+  source_repo: https://github.com/RedHatInsights/insights-remediations-frontend
 
 rhel-sw:
   title: Red Hat Enterprise Linux
@@ -447,6 +467,7 @@ ruledev:
   frontend:
     paths:
       - /staging/ruledev
+  source_repo: https://github.com/RedHatInsights/ruledev-frontend
 
 settings:
   title: Settings
@@ -471,6 +492,7 @@ sources:
     title: Sources
     paths:
       - /settings/sources
+  source_repo: https://github.com/RedHatInsights/sources-ui
 
 staging:
   title: Staging Bundle
@@ -486,6 +508,7 @@ storybook:
   frontend:
     paths:
       - /docs/storybook
+  source_repo: https://github.com/RedHatInsights/insights-frontend-storybook
 
 subscriptions:
   title: Subscription Watch
@@ -506,7 +529,7 @@ subscriptions:
       - id: openshift-sw
         title: Red Hat OpenShift
         group: subscriptions
-  git_repo: https://github.com/RedHatInsights/curiosity-frontend
+  source_repo: https://github.com/RedHatInsights/curiosity-frontend
 
 user-preferences:
   title: User preferences
@@ -520,6 +543,7 @@ user-preferences:
       - id: email
         title: Email preferences
         default: true
+  source_repo: https://github.com/RedHatInsights/user-preferences-frontend
 
 vulnerability:
   title: Vulnerability Management
@@ -531,3 +555,4 @@ vulnerability:
     title: Vulnerability
     paths:
       - /insights/vulnerability
+  source_repo: https://github.com/RedHatInsights/vulnerability-ui
