--- a/main.yml
+++ b/main.yml
@@ -14,6 +14,7 @@ advisor:
         title: Recommendations
       - id: topics
         title: Topics
+  source_repo: https://github.com/RedHatInsights/insights-advisor-frontend
 
 ansible:
   title: Red Hat Ansible Automation Platform
@@ -32,6 +33,7 @@ api-docs:
     paths:
       - /docs/api
       - /docs
+  source_repo: https://github.com/RedHatInsights/api-frontend
 
 applications:
   title: Applications
@@ -56,6 +58,7 @@ applications:
             - cost_management
     paths:
       - /settings/applications
+  source_repo: https://github.com/RedHatInsights/settings-frontend
 
 approval:
   title: Approval
@@ -68,6 +71,7 @@ approval:
     paths:
       - /ansible/catalog/approval
     reload: catalog/approval
+  source_repo: https://github.com/RedHatInsights/approval-ui
 
 automation-analytics:
   title: Automation Analytics
@@ -90,6 +94,7 @@ automation-analytics:
         title: Automation Calculator
       - id: notifications
         title: Notifications
+  source_repo: https://github.com/RedHatInsights/tower-analytics-frontend
 
 automation-hub:
   title: Automation Hub
@@ -105,7 +110,7 @@ automation-hub:
         title: Partners
       - id: my-namespaces
         title: My namespaces
-  git_repo: https://github.com/ansible/ansible-hub-ui
+  source_repo: https://github.com/ansible/ansible-hub-ui
 
 catalog:
   title: Automation Services Catalog
@@ -133,10 +138,12 @@ catalog:
       - id: orders
         title: Orders
       - id: approval
+  source_repo: https://github.com/RedHatInsights/catalog-ui
 
 chrome:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/insights-chrome-build
+  source_repo: https://github.com/RedHatInsights/insights-chrome
 
 compliance:
   title: Compliance
@@ -156,10 +163,12 @@ compliance:
         title: SCAP Policies
       - id: systems
         title: Systems
+  source_repo: https://github.com/RedHatInsights/compliance-frontend
 
 config:
   title: Cloud Services Config
   deployment_repo: https://github.com/RedHatInsights/cloud-services-config
+  source_repo: https://github.com/RedHatInsights/cloud-services-config
 
 cost-management:
   title: Cost Management
@@ -195,7 +204,7 @@ cost-management:
       - id: cost-models
         title: Cost models
         group: cost-management
-  git_repo: https://github.com/project-koku/
+  source_repo: https://github.com/project-koku/
   mailing_list: cost-mgmt@redhat.com
 
 details:
@@ -217,6 +226,7 @@ policies:
   frontend:
     paths:
       - /insights/policies
+  source_repo: https://github.com/RedHatInsights/policies-ui-frontend
 
 dashboard:
   title: Dashboard
@@ -226,6 +236,7 @@ dashboard:
     paths:
       - /insights
       - /insights/dashboard
+  source_repo: https://github.com/RedHatInsights/insights-dashboard
 
 docs:
   title: Documentation
@@ -255,10 +266,12 @@ drift:
       - id: baselines
         title: Baselines
         reload: drift/baselines
+  source_repo: https://github.com/RedHatInsights/drift-frontend
 
 frontend-assets:
   title: Frontend Assets
   deployment_repo: https://github.com/RedHatInsights/frontend-assets-build.git
+  source_repo: https://github.com/RedHatInsights/frontend-assets
 
 hooks:
   title: Web Hooks Service
@@ -271,6 +284,7 @@ hooks:
     title: Hooks
     paths:
       - /settings/hooks
+  source_repo: https://github.com/RedHatInsights/notifications-frontend
 
 ingress:
   title: Ingress
@@ -306,10 +320,12 @@ inventory:
     title: Inventory
     paths:
       - /insights/inventory
+  source_repo: https://github.com/RedHatInsights/insights-inventory-frontend
 
 landing:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/landing-page-frontend-build
+  source_repo: https://github.com/RedHatInsights/landing-page-frontend
 
 migrations:
   title: Migrations
@@ -334,7 +350,7 @@ migration-analytics:
     paths:
       - /migrations
       - /migrations/migration-analytics
-  git_repo: https://github.com/project-xavier/xavier-ui
+  source_repo: https://github.com/project-xavier/xavier-ui
 
 openshift:
   title: OpenShift (OCM)
@@ -354,6 +370,7 @@ openshift:
       - id: subscriptions
         title: Subscriptions
         group: openshift
+  source_repo: 
   top_level: true
 
 patch:
@@ -368,7 +385,7 @@ patch:
     title: Patch
     paths:
       - /insights/patch
-  git_repo: https://github.com/RedHatInsights/patchman-ui
+  source_repo: https://github.com/RedHatInsights/patchman-ui
 
 product:
   title: Product Documentation
@@ -382,6 +399,7 @@ product:
       - id: cloud-management-services
         title: Cloud Management Services
         reload: product/cloud-management-services
+  source_repo: https://github.com/RedHatInsights/docs-frontend
 
 rbac:
   title: Role-based Access Control
@@ -402,6 +420,7 @@ rbac:
         title: Roles
       - id: users
         title: Users
+  source_repo: https://github.com/RedHatInsights/insights-rbac-ui
 
 remediations:
   title: Remediations
@@ -413,6 +432,7 @@ remediations:
   frontend:
     paths:
       - /insights/remediations
+  source_repo: https://github.com/RedHatInsights/insights-remediations-frontend
 
 rhel-sw:
   title: Red Hat Enterprise Linux
@@ -444,6 +464,7 @@ ruledev:
   frontend:
     paths:
       - /staging/ruledev
+  source_repo: https://github.com/RedHatInsights/ruledev-frontend
 
 settings:
   title: Settings
@@ -468,6 +489,7 @@ sources:
     title: Sources
     paths:
       - /settings/sources
+  source_repo: https://github.com/RedHatInsights/sources-ui
 
 staging:
   title: Staging Bundle
@@ -483,6 +505,7 @@ storybook:
   frontend:
     paths:
       - /docs/storybook
+  source_repo: https://github.com/RedHatInsights/insights-frontend-storybook
 
 subscriptions:
   title: Subscription Watch
@@ -503,7 +526,7 @@ subscriptions:
       - id: openshift-sw
         title: Red Hat OpenShift
         group: subscriptions
-  git_repo: https://github.com/RedHatInsights/curiosity-frontend
+  source_repo: https://github.com/RedHatInsights/curiosity-frontend
 
 user-preferences:
   title: User preferences
@@ -517,6 +540,7 @@ user-preferences:
       - id: email
         title: Email preferences
         default: true
+  source_repo: https://github.com/RedHatInsights/user-preferences-frontend
 
 vulnerability:
   title: Vulnerability Management
@@ -528,3 +552,4 @@ vulnerability:
     title: Vulnerability
     paths:
       - /insights/vulnerability
+  source_repo: https://github.com/RedHatInsights/vulnerability-ui
