--- a/main.yml
+++ b/main.yml
@@ -88,7 +88,10 @@ automation-analytics:
         default: true
       - id: organization-statistics
         title: Organization Statistics
+      - id: notifications
+        title: Notifications
   source_repo: https://github.com/RedHatInsights/tower-analytics-frontend
+
 
 automation-hub:
   title: Automation Hub
