[prod-stable] Remove beta flag for Catalog and Approval
Bring Catalog setting in alignment with prod-beta.

--- a/main.yml
+++ b/main.yml
@@ -23,6 +23,7 @@ ansible:
       - id: automation-analytics
         default: true
       - id: automation-hub
+      - id: catalog
   top_level: true
 
 api-docs:
@@ -64,7 +65,6 @@ approval:
   api:
     versions:
       - v1
-    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/approvals-frontend-deploy.git
   frontend:
     paths:
@@ -107,11 +107,10 @@ automation-hub:
   source_repo: https://github.com/ansible/ansible-hub-ui
 
 catalog:
-  title: Catalog
+  title: Automation Services Catalog
   api:
     versions:
       - v1
-    isBeta: true
   channel: '#insights-catalog'
   deployment_repo: https://github.com/RedHatInsights/catalog-static-deploy
   frontend:
@@ -120,11 +119,15 @@ catalog:
     sub_apps:
       - id: products
         title: Products
-        default: true
       - id: portfolios
         title: Portfolios
+        default: true
       - id: platforms
         title: Platforms
+        permissions:
+          method: hasPermissions
+          args:
+            - [catalog:portfolios:create]
       - id: orders
         title: Orders
       - id: approval
