--- a/main.yml
+++ b/main.yml
@@ -23,6 +23,7 @@ ansible:
       - id: automation-analytics
         default: true
       - id: automation-hub
+      - id: catalog
   top_level: true
 
 api-docs:
