--- a/main.yml
+++ b/main.yml
@@ -151,7 +151,7 @@ compliance:
     paths:
       - /insights/compliance
     sub_apps:
-      - id: ''
+      - id: reports
         title: Reports
         default: true
       - id: scappolicies
