--- a/main.yml
+++ b/main.yml
@@ -370,6 +370,9 @@ openshift:
       - id: subscriptions
         title: Subscriptions
         group: openshift
+      - id: overview
+        title: Overview
+        group: openshift
   source_repo: 
   top_level: true
 
