--- a/main.yml
+++ b/main.yml
@@ -224,7 +224,7 @@ docs:
   frontend:
     sub_apps:
       - id: api-docs
-        reload: docs/api
+        reload: api
         default: true
   top_level: true
 
