Change redirect to API docs to be just api instead repeating docs (#217)

--- a/main.yml
+++ b/main.yml
@@ -227,7 +227,7 @@ docs:
   frontend:
     sub_apps:
       - id: api-docs
-        reload: docs/api
+        reload: api
         default: true
   top_level: true
 
