Add subapps for Patch (#222)

--- a/main.yml
+++ b/main.yml
@@ -370,6 +370,12 @@ patch:
     title: Patch
     paths:
       - /insights/patch
+    sub_apps:
+      - id: advisories
+        title: Advisories
+        default: true
+      - id: systems
+        title: Systems
   source_repo: https://github.com/RedHatInsights/patchman-ui
 
 policies:
