--- a/main.yml
+++ b/main.yml
@@ -344,6 +344,16 @@ migration-analytics:
       - /migrations/migration-analytics
   source_repo: https://github.com/project-xavier/xavier-ui
 
+my-user-access:
+  title: My user access
+  channel: '#platform-experience'
+  deployment_repo: https://github.com/RedHatInsights/rbac-frontend-deploy
+  frontend:
+    paths:
+      - /settings
+      - /settings/my-user-access
+  source_repo: https://github.com/RedHatInsights/insights-rbac-ui
+
 openshift:
   title: OpenShift (OCM)
   api:
@@ -408,10 +418,11 @@ rbac:
     versions:
       - v1
   deployment_repo: https://github.com/RedHatInsights/rbac-frontend-deploy.git
+  permissions:
+    method: isOrgAdmin
   frontend:
     title: User Access
     paths:
-      - /settings
       - /settings/rbac
     sub_apps:
       - id: groups
@@ -472,8 +483,9 @@ settings:
   top_level: true
   frontend:
     sub_apps:
-      - id: rbac
+      - id: my-user-access
         default: true
+      - id: rbac
       - id: sources
       - id: applications
 
