--- a/main.yml
+++ b/main.yml
@@ -147,6 +147,12 @@ catalog:
             - [catalog:order_processes:read]
       - id: orders
         title: Orders
+      - id: order_processes
+        title: Order processes
+        permissions:
+          method: hasPermissions
+          args:
+            - [catalog:order_processes:read]
       - id: approval
   source_repo: https://github.com/RedHatInsights/catalog-ui
 
