[ci-beta] Catalog - Add order_processes left nav (#236)
* Add order_processes left nav

* Moved order processes under Platforms

--- a/main.yml
+++ b/main.yml
@@ -139,6 +139,12 @@ catalog:
           method: hasPermissions
           args:
             - [catalog:portfolios:create]
+      - id: order_processes
+        title: Order processes
+        permissions:
+          method: hasPermissions
+          args:
+            - [catalog:order_processes:read]
       - id: orders
         title: Orders
       - id: approval
