Update id for order processes

--- a/main.yml
+++ b/main.yml
@@ -139,7 +139,7 @@ catalog:
           method: hasPermissions
           args:
             - [catalog:portfolios:create]
-      - id: order_processes
+      - id: order-processes
         title: Order processes
         permissions:
           method: hasPermissions
@@ -147,12 +147,6 @@ catalog:
             - [catalog:order_processes:read]
       - id: orders
         title: Orders
-      - id: order_processes
-        title: Order processes
-        permissions:
-          method: hasPermissions
-          args:
-            - [catalog:order_processes:read]
       - id: approval
   source_repo: https://github.com/RedHatInsights/catalog-ui
 
