[ci-beta] Updated id for order processes (#239)
* Add order_processes left nav

* Update id for order processes

--- a/main.yml
+++ b/main.yml
@@ -139,7 +139,7 @@ catalog:
           method: hasPermissions
           args:
             - [catalog:portfolios:create]
-      - id: order_processes
+      - id: order-processes
         title: Order processes
         permissions:
           method: hasPermissions
